<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".EditTaskFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_date_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Seleziona una data"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/edit_entry_type_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_date_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_start_time_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_start_time"
        app:layout_constraintTop_toBottomOf="@+id/edit_entry_type_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_end_time_layout"
        app:layout_constraintHorizontal_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_end_time_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_end_time"
        app:layout_constraintTop_toBottomOf="@+id/edit_entry_type_spinner"
        app:layout_constraintStart_toEndOf="@+id/edit_start_time_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_break_time_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_break_time"
        app:layout_constraintTop_toBottomOf="@+id/edit_start_time_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_break_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_travel_kms_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_travel_kms"
        app:layout_constraintTop_toBottomOf="@+id/edit_break_time_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_travel_hours_layout"
        app:layout_constraintHorizontal_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_travel_kms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_travel_hours_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_travel_hours"
        app:layout_constraintTop_toBottomOf="@+id/edit_break_time_layout"
        app:layout_constraintStart_toEndOf="@+id/edit_travel_kms_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_travel_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_task_description_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_task_description"
        app:layout_constraintTop_toBottomOf="@+id/edit_travel_kms_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_company_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_company"
        app:layout_constraintTop_toBottomOf="@+id/edit_task_description_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_save_changes"
        app:layout_constraintTop_toBottomOf="@+id/edit_company_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>